@@ -9,7 +9,31 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <repositories>
+  <repository>
+    <id>gluon-releases</id>
+    <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
+  </repository>
+</repositories>
+
     <dependencies>
+     <!-- https://mvnrepository.com/artifact/com.gluonhq/charm-glisten -->
+<dependency>
+    <groupId>com.gluonhq</groupId>
+    <artifactId>charm-glisten</artifactId>
+    <version>6.2.3</version>
+</dependency>
+<dependency>
+    <groupId>com.gluonhq.attach</groupId>
+    <artifactId>util</artifactId>
+    <version>4.0.17</version> 
+    </dependency>
+<dependency>
+    <groupId>com.jfoenix</groupId>
+    <artifactId>jfoenix</artifactId>
+    <version>9.0.10</version>
+</dependency>
+
         <dependency>
      <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
@@ -50,7 +74,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.0</version>               
                 <configuration>
                     <release>11</release>
                 </configuration>
@@ -61,6 +85,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.mycompany.tugasakhir1.App</mainClass>
+                    
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
                 <executions>
                     <execution>
